# hs-bindgen-attribute

./: .gitignore  .hsbindgen  Cargo.toml  README.md  build.rs  flake.nix
.github/workflows/: rust.yml
src/: antlion.rs  haskell.rs  lib.rs  reflexive.rs  rust.rs  toml.rs
