[package]
authors = ["Yvan Sraka <yvan@sraka.xyz>"]
description = "Handy macro to generate C-FFI bindings from Rust to Haskell"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "hs-bindgen-attribute"
repository = "https://github.com/yvan-sraka/hs-bindgen-attribute"
rust-version = "1.64.0"
version = "0.9.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
displaydoc = "0.2"
hs-bindgen-types = "0.9"
lazy_static = { version = "1.4", optional = true }
quote = "1.0"
reflexive = { version = "0.4", optional = true }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
syn = { version = "1.0", features = [ "full" ] }
thiserror = "1.0"
toml = "0.5"
warning = { version = "0.1", path = "warning" }

[build-dependencies]
warning = { version = "0.1", path = "warning" }

[features]
default = []
full = ["reflexive"]
reflexive = ["dep:reflexive", "dep:lazy_static"]
